--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-      crossorigin="anonymous"/>
+      crossorigin="anonymous"
+    />
     <script src="https://kit.fontawesome.com/ad53293377.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -106,7 +107,7 @@
               </div>
               <div class="col-md-4">
                 <div class="threeimage text-center">
-                  <img src="images/E-sporst3.png" alt="" />
+                  <img src="images/E-sporst3.png" class="img-fluid" alt="" />
                   <h1>Lorem ipsum dolor sit amet</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
                 </div>
@@ -236,10 +237,14 @@
             <h1>Newsletter</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br />
-              eiusmod tempor incididunt ut labore et dolore
+              eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Iure qui reprehenderit error! Necessitatibus modi illo voluptates recusandae distinctio ducimus
+              repudiandae tempore dolorem aut? Dolorum ut veniam obcaecati, facilis qui, possimus incidunt repellendus
+              illum deserunt quod ipsam animi earum magnam cumque, dolore perferendis! Facilis fugit, architecto cum
+              numquam enim distinctio blanditiis.
             </p>
-            <div class="aaa">
-              <a href="#">read more</a>
+            <div class="errowicon">
+              <i class="fas fa-long-arrow-alt-right"></i>
             </div>
           </div>
           <div class="col-md-6">
@@ -261,6 +266,9 @@
                     </p>
                   </li>
                 </ul>
+              </div>
+              <div class="aaaa text-center">
+                <a href="#">read more</a>
               </div>
             </form>
           </div>
