--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-sports</title>
+    <title>//Newsports\\ one page website template design using html, css, bootstrap and java-script</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,20 +12,24 @@
       crossorigin="anonymous"
     />
     <script src="https://kit.fontawesome.com/ad53293377.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dosis:wght@400;500;600;800&family=PT+Sans+Narrow:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="images/E-sporst2.png" />
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
     <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <header>
-      <div class="">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container-fluid">
+      <div class="wow fadeInDown">
+        <nav class="navbar navbar-expand-lg navber-light">
+          <div class="container-fluid padding">
             <a class="navbar-brand" href="#"><img src="images/E-sporst.png" alt="" /></a>
             <button
               class="navbar-toggler"
@@ -36,7 +40,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon"></span>
+              <span><i class="fas fa-align-justify"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-lg-0 mb-2">
@@ -65,25 +69,18 @@
     <section class="sectionone">
       <div class="container">
         <div class="row">
-          <div class="col-md-5">
-            <ul>
-              <h1>
-                discover the <br />
-                new sports <br />
-                online
-              </h1>
-            </ul>
+          <div class="col-md-6 wow fadeInLeft">
+            <h1>discover the new sports online</h1>
             <p>13 - 14 June Online Event</p>
             <h5>
-              Lorem ipsum dolor sit amet, conse ctetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
-              lacus vel facilisis.
+              Lorem ipsum dolor sit amet, conse ctetur adipiscing elit, sed sit amet, consectetur adipisicing elit conse
+              ctetur.
             </h5>
             <div class="aaa">
               <a href="#">read more</a>
             </div>
           </div>
-          <div class="col-md-7 text-end">
+          <div class="col-md-6 text-center wow fadeInRight">
             <div class="imagesone">
               <img src="images/E-sporst1.png" class="img-fluid" alt="" />
             </div>
@@ -96,27 +93,36 @@
       <div class="container">
         <div class="row">
           <h1 class="text-center">our team</h1>
-          <div class="col-md-10 m-auto">
+          <div class="col-md-12 m-auto">
             <div class="row">
-              <div class="col-md-4">
-                <div class="threeimage text-center">
-                  <img src="images/E-sporst2.png" alt="" />
-                  <h1>Lorem ipsum dolor sit amet</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+              <div class="col-md-4 threeimage m-auto wow fadeInDown" data-wow-delay=".2s">
+                <div class="text-center">
+                  <img src="images/E-sporst2.png" class="img-fluid" alt="" />
+                  <h1>
+                    Lorem ipsum dolor <br />
+                    sit amet
+                  </h1>
+                  <p>Lorem ipsum dolor consectetur sit amet, consectetur adipisicing elit, seddo</p>
                 </div>
               </div>
-              <div class="col-md-4">
-                <div class="threeimage text-center">
+              <div class="col-md-4 threeimage m-auto wow fadeInDown" data-wow-delay=".4s">
+                <div class="text-center">
                   <img src="images/E-sporst3.png" class="img-fluid" alt="" />
-                  <h1>Lorem ipsum dolor sit amet</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+                  <h1>
+                    Lorem ipsum <br />
+                    dolor
+                  </h1>
+                  <p>Lorem ipsum dolor consectetur sit amet, consectetur adipisicing elit, seddo.</p>
                 </div>
               </div>
-              <div class="col-md-4">
-                <div class="threeimage text-center">
-                  <img src="images/E-sporst4.png" alt="" />
-                  <h1>Lorem ipsum dolor sit amet</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+              <div class="col-md-4 threeimage m-auto wow fadeInDown" data-wow-delay=".6s">
+                <div class="text-center">
+                  <img src="images/E-sporst4.png" class="img-fluid" alt="" />
+                  <h1>
+                    Lorem ipsum <br />
+                    dolor
+                  </h1>
+                  <p>Lorem ipsum dolor consectetur sit amet, consectetur adipisicing elit, seddo.</p>
                 </div>
               </div>
             </div>
@@ -127,13 +133,15 @@
     <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <section class="sectionthree">
       <div class="container">
-        <div class="row">
-          <h1>About Us</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br />
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-          </p>
-          <img src="images/E-sporst5.png" alt="" />
+        <div class="row wow fadeInDown">
+          <div class="col-md-6 m-auto">
+            <h1>About Us</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim.
+            </p>
+          </div>
+          <img src="images/E-sporst5.png" class="img-fluid" alt="" />
         </div>
         <a href="#">read more</a>
       </div>
@@ -142,10 +150,10 @@
     <section class="sectionfour">
       <div class="container">
         <div class="row">
-          <div class="col-md-7">
+          <div class="col-md-7 wow fadeInLeft">
             <img src="images/E-sporst6.png" class="img-fluid" alt="" />
           </div>
-          <div class="col-md-5 text-end">
+          <div class="col-md-5 text-end wow fadeInDown">
             <h1>Compate with us</h1>
             <p>
               Lorem ipsum dolor sit amet <br />
@@ -163,7 +171,7 @@
     <section class="sectionfive">
       <div class="container">
         <div class="row">
-          <div class="col-md-5">
+          <div class="col-md-5 wow fadeInUp">
             <h1>ourtraining</h1>
             <p>
               Lorem ipsum dolor sit amet <br />
@@ -176,7 +184,7 @@
               <a href="#">read more</a>
             </div>
           </div>
-          <div class="col-md-7 text-end">
+          <div class="col-md-7 text-end wow fadeInRight">
             <img src="images/E-sporst1.png" class="img-fluid" alt="" />
           </div>
         </div>
@@ -187,40 +195,40 @@
       <div class="container">
         <div class="row">
           <h1 class="text-center">blog</h1>
-          <div class="col-md-4">
+          <div class="col-md-4 wow fadeInUp" data-wow-delay=".2s">
             <div class="forhover">
               <img src="images/E-sporst7.png" class="w-100" alt="" />
             </div>
             <h2>Lorem ipsum dolor sit amet, consectetur</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna
             </p>
             <div class="aaa">
               <a href="#">read more</a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 wow fadeInUp" data-wow-delay=".4s">
             <div class="forhover">
               <img src="images/E-sporst8.png" class="w-100" alt="" />
             </div>
             <h2>Lorem ipsum dolor sit amet, consectetur</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna
             </p>
             <div class="aaa">
               <a href="#">read more</a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 wow fadeInUp" data-wow-delay=".6s">
             <div class="forhover">
               <img src="images/E-sporst10.png" class="w-100" alt="" />
             </div>
             <h2>Lorem ipsum dolor sit amet, consectetur</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna
             </p>
             <div class="aaa">
               <a href="#">read more</a>
@@ -236,20 +244,16 @@
           <div class="col-md-6">
             <h1>Newsletter</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br />
-              eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Iure qui reprehenderit error! Necessitatibus modi illo voluptates recusandae distinctio ducimus
-              repudiandae tempore dolorem aut? Dolorum ut veniam obcaecati, facilis qui, possimus incidunt repellendus
-              illum deserunt quod ipsam animi earum magnam cumque, dolore perferendis! Facilis fugit, architecto cum
-              numquam enim distinctio blanditiis.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure qui reprehenderit error!
+              Necessitatibus modi illo voluptates recusandae distinctio ducimus repudiandae tempore dolorem aut? Dolorum
+              ut veniam obcaecati, facilis qui, possimus incidunt repellendus illum deserunt quod ipsam animi earum
+              magnam cumque, dolore perferendis! Facilis fugit, architecto cum numquam enim distinctio blanditiis.
             </p>
-            <div class="errowicon">
-              <i class="fas fa-long-arrow-alt-right"></i>
-            </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 wow fadeIn">
             <form action="">
-              <h3>contact with us</h3>
+              <h3>contact us</h3>
               <div class="fristrow">
                 <input type="text" name="name" placeholder="name" />
                 <input type="text" name="surename" placeholder="surename" />
@@ -262,13 +266,13 @@
                   <li>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et.
+                      labore
                     </p>
                   </li>
                 </ul>
               </div>
               <div class="aaaa text-center">
-                <a href="#">read more</a>
+                <a href="#">send</a>
               </div>
             </form>
           </div>
@@ -276,15 +280,24 @@
       </div>
     </section>
     <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-    <section class="sectioneight text-center">
+    <section class="sectioneight text-center wow fadeIn">
       <div class="container">
         <div class="row">
-          <h1>contact with us</h1>
-          <img src="images/E-sporst9.png" alt="" />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br />amet tempor incididunt ut
-            labore et dolore magna aliqua.
-          </p>
+          <h1>Follow Me</h1>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d888630.2667639956!2d-74.31318224827453!3d40.66884394840863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1634680424743!5m2!1sen!2sbd"
+            width=""
+            height=""
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+          <div class="col-md-6 m-auto">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod amet tempor incididunt ut labore
+              et dolore magna aliqua.
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -295,7 +308,7 @@
           <div class="footimg">
             <img src="images/E-sporst.png" alt="" />
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-6">
             <div class="ulli">
               <ul>
                 <li>team</li>
@@ -305,7 +318,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-6">
             <div class="ulli">
               <ul>
                 <li>faqs</li>
@@ -322,10 +335,10 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-sm-6">
+          <div class="col-md-6 col-sm-6 py-0 col-6">
             <p>copyright I @ gipu</p>
           </div>
-          <div class="col-md-6 col-sm-6">
+          <div class="col-md-6 col-sm-6 col-6">
             <ul>
               <li>
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -346,6 +359,10 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
   </body>
 </html>
 <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
