--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <header>
       <div class="wow fadeInDown">
-        <nav class="navbar navbar-expand-lg navber-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid padding">
             <a class="navbar-brand" href="#"><img src="images/E-sporst.png" alt="" /></a>
             <button
@@ -73,7 +73,7 @@
             <h1>discover the new sports online</h1>
             <p>13 - 14 June Online Event</p>
             <h5>
-              Lorem ipsum dolor sit amet, conse ctetur adipiscing elit, sed sit amet, consectetur adipisicing elit conse
+              Lorem ipsum dolor sit amen, conse ctetur adipiscing elit, sed sit amet, consectetur adipisicing elit conse
               ctetur.
             </h5>
             <div class="aaa">
