--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6 py-0 col-6">
-            <p>copyright I @ gipu</p>
+            <p>copyright @ gipu</p>
           </div>
           <div class="col-md-6 col-sm-6 col-6">
             <ul>
