--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-lg-0 mb-2">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">home</a>
+                  <a class="nav-link" href="">home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">product</a>
+                  <a class="nav-link" href="">product</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">promo</a>
+                  <a class="nav-link" href="">promo</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">about</a>
+                  <a class="nav-link" href="">about</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">contact</a>
+                  <a class="nav-link" href="">contact</a>
                 </li>
               </ul>
             </div>
@@ -77,7 +77,7 @@
               ctetur.
             </h5>
             <div class="aaa">
-              <a href="#">read more</a>
+              <a href="">read more</a>
             </div>
           </div>
           <div class="col-md-6 text-center wow fadeInRight">
@@ -143,7 +143,7 @@
           </div>
           <img src="images/E-sporst5.png" class="img-fluid" alt="" />
         </div>
-        <a href="#">read more</a>
+        <a href="">read more</a>
       </div>
     </section>
     <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
@@ -162,7 +162,7 @@
               labore et dolore magna aliqua. Ut <br />
               enim ad minim veniam, quis nostrud
             </p>
-            <a href="#">contact Us</a>
+            <a href="">contact Us</a>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
               enim ad minim veniam, quis nostrud
             </p>
             <div class="aaa">
-              <a href="#">read more</a>
+              <a href="">read more</a>
             </div>
           </div>
           <div class="col-md-7 text-end wow fadeInRight">
@@ -205,7 +205,7 @@
               dolore magna
             </p>
             <div class="aaa">
-              <a href="#">read more</a>
+              <a href="">read more</a>
             </div>
           </div>
           <div class="col-md-4 wow fadeInUp" data-wow-delay=".4s">
@@ -218,7 +218,7 @@
               dolore magna
             </p>
             <div class="aaa">
-              <a href="#">read more</a>
+              <a href="">read more</a>
             </div>
           </div>
           <div class="col-md-4 wow fadeInUp" data-wow-delay=".6s">
@@ -231,7 +231,7 @@
               dolore magna
             </p>
             <div class="aaa">
-              <a href="#">read more</a>
+              <a href="">read more</a>
             </div>
           </div>
         </div>
@@ -272,7 +272,7 @@
                 </ul>
               </div>
               <div class="aaaa text-center">
-                <a href="#">send</a>
+                <a href="">send</a>
               </div>
             </form>
           </div>
@@ -341,13 +341,13 @@
           <div class="col-md-6 col-sm-6 col-6">
             <ul>
               <li>
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href=""><i class="fab fa-facebook-f"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href=""><i class="fab fa-youtube"></i></a>
               </li>
             </ul>
           </div>
